--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	"license": "MIT",
 	"repository": {
 		"type": "git",
-		"url": "http://github.com/cferdinandi/smooth-scroll"
+		"url": "https://github.com/interactiveRob/smooth-scroll"
 	},
 	"devDependencies": {
 		"gulp": "4.0.0",
